src/integration/snapshots/rustclean__integration__screens__report-largest-files-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  En büyük dosyalar — /Users/demo  │  17 satır, 8.6 GiB (diskte)
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
      Boyut       Adet       Son değişiklik   Konum
▶ [ ]     3.0 GiB            27.08.2025 12:00 Downloads/Xcode_16.xip
  [ ]     2.3 GiB            28.02.2025 12:00 Movies/holiday-2024.mp4
  [ ]   900.0 MiB            22.08.2026 12:00 Movies/screen-recording.mov
  [ ]   820.0 MiB            03.06.2026 12:00 Projects/api/target/debug/api
  [ ]   610.0 MiB            30.09.2026 12:00 Library/Caches/com.example.browser/cache.db
  [ ]   450.0 MiB            15.03.2026 12:00 Downloads/setup.dmg
  [ ]   310.0 MiB            28.09.2026 12:00 Projects/web/node_modules/react/index.js
  [ ]   150.0 MiB            02.08.2026 12:00 Applications/Sketchpad.app/Contents/MacOS/Sketchpad
  [ ]   120.0 MiB            19.09.2026 12:00 Downloads/photos.zip
  [ ]    55.0 MiB            11.09.2026 12:00 Library/Application Support/com.example.sketchpad/stat
  [ ]     4.0 MiB            05.12.2025 12:00 Documents/taxes-2025.pdf
  [ ]     3.0 MiB            29.09.2026 12:00 Downloads/report.pdf
  [ ]    16.0 KiB            30.09.2026 12:00 Documents/notes.md
  [ ]     4.0 KiB            03.07.2026 12:00 Documents/README.md
  [ ]     4.0 KiB            03.06.2026 12:00 Projects/api/Cargo.toml
  [ ]     4.0 KiB            28.09.2026 12:00 Projects/web/README.md
  [ ]     4.0 KiB            28.09.2026 12:00 Projects/web/package.json







────────────────────────────────────────────────────────────────────────────────────────────────────
Enter: dosyanın bulunduğu klasörü aç
 ↑↓  gez   Space  sepete   t  tümü   f  yaş filtresi   x  çöpe taşı   S  sepet   Enter  aç / konuma
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 29+16 Red/-
 5: 2+3 Gray/- | 29+16 Yellow/-
 6: 2+3 Gray/- | 29+16 Yellow/-
 7: 2+3 Gray/- | 29+16 Green/-
 8: 2+3 Gray/- | 29+16 Yellow/-
 9: 2+3 Gray/- | 29+16 Green/-
10: 2+3 Gray/- | 29+16 Yellow/-
11: 2+3 Gray/- | 29+16 Cyan/-
12: 2+3 Gray/- | 29+16 Cyan/-
13: 2+3 Gray/- | 29+16 Yellow/-
14: 2+3 Gray/- | 29+16 Green/-
15: 2+3 Gray/- | 29+16 Green/-
16: 2+3 Gray/- | 29+16 Yellow/-
17: 2+3 Gray/- | 29+16 Yellow/-
18: 2+3 Gray/- | 29+16 Green/-
19: 2+3 Gray/- | 29+16 Green/-
28: 0+100 Gray/-
29: 0+4 Black/Gray | 10+7 Black/Gray | 26+3 Black/Gray | 36+3 Black/Gray | 54+3 Black/Gray | 69+3 Black/Gray | 80+7 Black/Gray
