src/integration/snapshots/rustclean__integration__screens__report-repeated-names-drill-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  En çok tekrar eden dosya adları › README.md — /Users/demo  │  2 satır, 8.0 KiB (diskte)
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
      Boyut       Adet       Son değişiklik   Konum
▶ [ ]     4.0 KiB            28.09.2026 12:00 Projects/web/README.md
  [ ]     4.0 KiB            03.07.2026 12:00 Documents/README.md






















────────────────────────────────────────────────────────────────────────────────────────────────────

 ↑↓  gez   Space  sepete   t  tümü   f  yaş filtresi   x  çöpe taşı   S  sepet   Enter  aç / konuma
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 29+16 Yellow/-
29: 0+4 Black/Gray | 10+7 Black/Gray | 26+3 Black/Gray | 36+3 Black/Gray | 54+3 Black/Gray | 69+3 Black/Gray | 80+7 Black/Gray
