src/integration/snapshots/rustclean__integration__screens__report-similar-images-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Similar images (resized copies) — /Users/demo  │  2 rows, 6.0 MiB (on disk)
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
      Size        Count      Modified         Location                       Details
▶ [ ]     5.0 MiB    3 items 2026-09-21 12:00 beach.jpg                      3 similar images · larg
  [ ]     1.0 MiB    2 items 2025-12-05 12:00 IMG_0042.jpg                   2 similar images · larg






















────────────────────────────────────────────────────────────────────────────────────────────────────
Size: space freed by deleting all but the largest image. Space: add all but the largest to the baske
 ?  help   ↑↓  move   Space  to basket   t  all   f  age filter   x  move to trash   S  basket   Ent
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 18+10 Gray/- | 29+16 Yellow/- | 46+12 LightBlue/- BOLD | 77+23 Gray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+4 Black/Gray | 21+7 Black/Gray | 40+3 Black/Gray | 49+3 Black/Gray | 65+3 Black/Gray | 84+3 Black/Gray | 96+4 Black/Gray
