src/integration/snapshots/rustclean__integration__screens__report-similar-images-group-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Benzer görseller (yeniden boyutlanmış kopyalar) › beach.jpg — /Users/demo  │  3 satır, 1
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
      Boyut       Adet       Son değişiklik   Konum                             Ayrıntı
▶ [ ]     6.0 MiB            01.09.2026 12:00 Pictures/Trip/beach.jpg           4032×3024 · en büyük
  [ ]     3.0 MiB            11.09.2026 12:00 Pictures/Trip/beach-edited.jpg    4032×3024
  [ ]     2.0 MiB            21.09.2026 12:00 Pictures/Export/beach-small.png   1600×1200





















────────────────────────────────────────────────────────────────────────────────────────────────────
En büyük görsel: Pictures/Trip/beach.jpg · t: diğerlerini sepete ekle
 ?  yardım   ↑↓  gez   Space  sepete   t  tümü   f  yaş filtresi   x  çöpe taşı   S  sepet   Enter
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 29+16 Cyan/- | 80+9 Gray/-
 5: 2+3 Gray/- | 29+16 Cyan/- | 80+9 Gray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 38+3 Black/Gray | 48+3 Black/Gray | 66+3 Black/Gray | 81+3 Black/Gray | 92+7 Black/Gray
