src/integration/snapshots/rustclean__integration__screens__report-similar-images-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Benzer görseller (yeniden boyutlanmış kopyalar) — /Users/demo  │  2 satır, 6.0 MiB (disk
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
      Boyut       Adet       Son değişiklik   Konum                          Ayrıntı
▶ [ ]     5.0 MiB     3 adet 21.09.2026 12:00 beach.jpg                      3 benzer görsel · en bü
  [ ]     1.0 MiB     2 adet 05.12.2025 12:00 IMG_0042.jpg                   2 benzer görsel · en bü






















────────────────────────────────────────────────────────────────────────────────────────────────────
Boyut: en büyük görsel dışındakiler silinince açılacak yer. Space: en büyüğü hariç sepete ekle · Ent
 ?  yardım   ↑↓  gez   Space  sepete   t  tümü   f  yaş filtresi   x  çöpe taşı   S  sepet   Enter
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 18+10 Gray/- | 29+16 Yellow/- | 46+12 LightBlue/- BOLD | 77+23 Gray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 38+3 Black/Gray | 48+3 Black/Gray | 66+3 Black/Gray | 81+3 Black/Gray | 92+7 Black/Gray
